--- a/war/Cosmos.html
+++ b/war/Cosmos.html
@@ -16,7 +16,8 @@
     <!-- Any title is fine                         -->
     <!--                                           -->
     <title>Web Application Starter Project</title>
-    
+
+      <link type="text/css" rel="stylesheet" href="Cosmos.css">
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
     <!-- If you add any GWT meta tags, they must   -->
